updated links and changed text

--- a/tickevents-placeholder/src/app/getting-started/getting-started.component.html
+++ b/tickevents-placeholder/src/app/getting-started/getting-started.component.html
@@ -46,38 +46,6 @@
                     </div>
                 </div>
             </div>
-            <!-- End title banner section -->
-
-            <!-- First info section -->
-            <div class="row no-gutters section-padding">
-                <div class="col">
-                    <div class="container px-3 px-md-0">
-                        <div class="row">
-                            <div class="col-12 col-md-5">
-                                <div class="row align-content-center h-100">
-                                    <div class="col-12" [ngsReveal]="scrollUp">
-                                        <h5 class="m-0 pink">Persoonlijke Benadering</h5>
-                                    </div>
-                                    <div class="col-12" [ngsReveal]="scrollUp">
-                                        <h2 class="section-title blue">Je staat er niet alleen voor. Tickevents denkt met je mee
-                                        </h2>
-                                    </div>
-                                    <div class="col-12 blue" [ngsReveal]="scrollUp">
-                                        <p>Tickevents gelooft in de persoonlijke benadering. Werken met abstracte, onbereikbare
-                                            ticketingplatformen is verleden tijd. Bij Tickevents denken we met je mee over je
-                                            evenement, en proberen wij jou te helpen waar we maar kunnen. Samen halen we het
-                                            meeste uit jouw evenement!</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-12 col-md-7 text-center text-md-right" [ngsReveal]="scrollUp">
-                                <img src="../../assets/friendship.svg" alt="tickets" class="tickets-img-2 px-3">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- End first info section -->
 
 
             <div class="row no-gutters section-padding">
@@ -85,12 +53,7 @@
                     <div class="row no-gutters align-content-center">
                         <div class="col-12 col-md-5">
                             <h1 class="ft-alata font-weight-bold">Aan de slag met Tickevents</h1>
-                            <p class="ft-montserrat">Tickevents is vol in ontwikkeling en we willen je hier graag bij
-                                betrekken. Wegens deze
-                                ontwikkelingen kunnen we nog niet iedereen toegang tot het platform geven. Wil jij
-                                betrokken
-                                worden bij deze ontwikkelingen en als een van de eersten een evenement aanmaken bij
-                                Tickevents? Laat dan je email achter.</p>
+                            <p class="ft-montserrat">Jij wilt aan de slag met Tickevents, super! Laat je email hier achter, en wij nemen contact met jou op, zodat we samen jouw evenement tot een grandioos succes kunnen brengen. Je ontvangt zo snel mogelijk bericht!</p>
                         </div>
 
                         <div class="col-12 col-md-7 mt-5 mt-md-0 align-self-center">
