--- a/tickevents-placeholder/src/app/new-home/header/header.component.html
+++ b/tickevents-placeholder/src/app/new-home/header/header.component.html
@@ -40,7 +40,7 @@
             <!-- <li class="nav-item py-2 py-lg-1 px-lg-3" routerLink="/about" routerLinkActive="active">Over ons</li> -->
             <li class="nav-item py-2 py-lg-1 px-lg-3" routerLink="/pricing" routerLinkActive="active">Prijzen</li>
             <li class="nav-item py-2 py-lg-1 px-lg-3" routerLink="/how-it-works" routerLinkActive="active">Hoe het werkt</li>
-            <li class="nav-item py-2 py-lg-1 px-lg-5 btn-cta" routerLink="/getstarted" routerLinkActive="active">Aan de slag</li>
+            <li class="nav-item py-2 py-lg-1 px-lg-5 btn-cta" routerLink="/getting-started" routerLinkActive="active">Aan de slag</li>
         </ul>
     </div>
 </nav>
