--- a/tickevents-placeholder/src/app/new-home/new-home.component.html
+++ b/tickevents-placeholder/src/app/new-home/new-home.component.html
@@ -156,7 +156,7 @@
 										Tickevents. Zo kan je meer, vaker en grotere evenementen organiseren.</p>
 									<div class="row no-gutters">
 										<div class="col-12 col-md-6 mt-4 pr-md-2">
-											<button routerLink="/getstarted"
+											<button routerLink="/getting-started"
 												class="button btn-cta w-100 text-center">Aan de
 												slag</button>
 										</div>
@@ -403,7 +403,7 @@
 								je evenement aan</span></h2>
 					</div>
 					<div class="col-12 col-md-6 col-xl-4 ml-xl-auto mr-xl-0 order-xl-3 mt-3 mt-xl-0">
-						<button routerLink="/getstarted" class="button btn-cta w-100 text-center ft-alata">Aan de
+						<button routerLink="/getting-started" class="button btn-cta w-100 text-center ft-alata">Aan de
 							slag</button>
 					</div>
 					<div class="col-12 col-xl-4 order-xl-1 mt-5">
