--- a/tickevents-placeholder/src/app/new-home/footer/footer.component.css
+++ b/tickevents-placeholder/src/app/new-home/footer/footer.component.css
@@ -10,20 +10,17 @@ input {
     border: none !important;
 }
 
-.btn-secondary-cta {
-    height: 2.5em;
-    color: white;
-    border-radius: 1.25em;
-    border: none;
-    background: linear-gradient(90deg, #9A00FF, #FF004E)
-}
-
 .footer-logo {
     height: 40px;
 }
 
 .section-header {
     font-size: 1.8em;
+}
+
+.error-message {
+    color: red;
+    margin-top: 2em !important;
 }
 
 @media (min-width: 768px) {
