--- a/tickevents-placeholder/src/app/new-home/new-home.component.html
+++ b/tickevents-placeholder/src/app/new-home/new-home.component.html
@@ -157,7 +157,7 @@
 									<div class="row no-gutters">
 										<div class="col-12 col-md-6 mt-4 pr-md-2">
 											<button routerLink="/getting-started"
-												class="button btn-cta w-100 text-center">Aan de
+												class="button cta-button w-100 text-center">Aan de
 												slag</button>
 										</div>
 										<div class="col-12 col-md-6 button-section mt-4 pl-md-2">
@@ -334,7 +334,7 @@
 	<!-- End cars section -->
 
 	<!-- Success section -->
-	<div class="section success-section row no-gutters mt-5 px-3 ">
+	<div class="section success-section row no-gutters mt-5 px-3 overflow-hidden">
 		<div class="col">
 			<div class="container">
 				<div class="row no-gutters">
@@ -403,7 +403,7 @@
 								je evenement aan</span></h2>
 					</div>
 					<div class="col-12 col-md-6 col-xl-4 ml-xl-auto mr-xl-0 order-xl-3 mt-3 mt-xl-0">
-						<button routerLink="/getting-started" class="button btn-cta w-100 text-center ft-alata">Aan de
+						<button routerLink="/getting-started" class="button cta-button w-100 text-center ft-alata">Aan de
 							slag</button>
 					</div>
 					<div class="col-12 col-xl-4 order-xl-1 mt-5">
