--- a/tickevents-placeholder/src/app/shared/header/header.component.html
+++ b/tickevents-placeholder/src/app/shared/header/header.component.html
@@ -17,7 +17,7 @@
                     routerLink="/pricing" routerLinkActive="active">Prijzen</a>
                 <a class="nav-link ml-2 mr-2" data-toggle="collapse" data-target=".navbar-collapse.show"
                     routerLink="/how-it-works" routerLinkActive="active">Hoe het werkt</a>
-                <a class="nav-link ml-2 mr-2 mr-md-0 pr-md-0" data-toggle="collapse" data-target=".navbar-collapse.show"
+                <a class="nav-link ml-2 mr-2 mr-md-0 pr-md-0 cta-button" data-toggle="collapse" data-target=".navbar-collapse.show"
                     routerLink="/getting-started" routerLinkActive="active">Aan de slag</a>
             </div>
         </div>
