--- a/tickevents-placeholder/src/styles.css
+++ b/tickevents-placeholder/src/styles.css
@@ -57,6 +57,26 @@ button {
     transition: background-color 0.2s ease;
 }
 
+.cta-button {
+    background:linear-gradient(90deg, #FFA200, #FF004E);
+    border: none !important;
+    font-size: 1.25em;
+}
+
+.cta-secondaty-button {
+    border: 2px solid white;
+    font-size: 1.125em;
+    background: rgba(0, 0, 0, 0);
+}
+
+.cta-email-button {
+    height: 2.5em;
+    color: white;
+    border-radius: 1.25em;
+    border: none;
+    background: linear-gradient(90deg, #9A00FF, #FF004E)
+}
+
 .section-padding {
     padding-top: 75px;
     padding-bottom: 75px;
