--- a/tickevents-placeholder/src/app/getting-started/getting-started.component.html
+++ b/tickevents-placeholder/src/app/getting-started/getting-started.component.html
@@ -80,7 +80,7 @@
 
                                     <div class="form-row mt-3  justify-content-end">
                                         <div class="col-12 col-sm-3">
-                                            <button type="submit" class="btn w-100">
+                                            <button type="submit" class="cta-email-button btn w-100">
                                                 <ngx-spinner></ngx-spinner>
                                                 <span>Verstuur</span>
                                             </button>
@@ -123,4 +123,5 @@
         </div>
     </div>
 </div>
-<app-footer></app-footer>
+
+<app-new-home-footer></app-new-home-footer>
