--- a/tickevents-placeholder/src/app/how-it-works/how-it-works.component.html
+++ b/tickevents-placeholder/src/app/how-it-works/how-it-works.component.html
@@ -16,7 +16,7 @@
                                     tickets, en klaar!</p>
                             </div>
                             <div class="col-12 mt-4 mb-0 mt-md-5">
-                                <a routerLink="/register" class="cta btn">Evenement aanmaken</a>
+                                <a routerLink="/register" class="cta-button">Evenement aanmaken</a> 
                             </div>
                             <div class="col-12 align-self-end text-center justify-content-center d-md-none">
                                 <app-chevron text="Meer info"></app-chevron>
@@ -60,7 +60,7 @@
                                             aan jouw tickets. Bij het aanmaken van jouw evenement kan je aangeven welke
                                             klantgegevens jij wilt verzamelen. Hoe minder gegevens klanten hoeven achter
                                             te laten, hoe makkelijker het aankooproces wordt!</p>
-                                        <a routerLink="/register" class="cta btn">Evenement aanmaken</a>
+                                        <a routerLink="/register" class="cta-button">Evenement aanmaken</a>
                                     </div>
                                 </div>
                             </div>
@@ -446,4 +446,6 @@
 
         </div>
     </div>
-</div><app-footer></app-footer>
+</div>
+
+<app-new-home-footer></app-new-home-footer>
