--- a/tickevents-placeholder/src/app/pricing/pricing.component.html
+++ b/tickevents-placeholder/src/app/pricing/pricing.component.html
@@ -48,7 +48,7 @@
 					</div>
 					<div class="row no-gutters justify-content-end mt-4" [ngsReveal]="scrollUpDelay">
 						<div class="col-12 col-sm-6 col-lg-5 ">
-							<a type="button" class="btn w-100" routerLink="/getting-started">Maak je evenement</a>
+							<a type="button" class="btn cta-button w-100" routerLink="/getting-started">Maak je evenement</a>
 						</div>
 					</div>
 				</div>
@@ -95,7 +95,7 @@
 
 						<div class="col-12 align-self-end">
 							<hr class="m-0">
-							<a type="button" class="btn w-100 my-4 my-lg-5" routerLink="/getting-started">Aan de
+							<a type="button" class="btn cta-button w-100 my-4 my-lg-5" routerLink="/getting-started">Aan de
 								slag</a>
 						</div>
 
@@ -129,7 +129,7 @@
 
 						<div class="col-12 align-self-end">
 							<hr class="m-0">
-							<a type="button" class="btn w-100 my-4 my-lg-5" routerLink="/getting-started">Aan de
+							<a type="button" class="btn cta-button w-100 my-4 my-lg-5" routerLink="/getting-started">Aan de
 								slag</a>
 						</div>
 
@@ -160,7 +160,7 @@
 
 						<div class="col-12 align-self-end">
 							<hr class="m-0">
-							<a type="button" class="btn w-100 my-4 my-lg-5" routerLink="/getting-started">Aan de
+							<a type="button" class="btn cta-button w-100 my-4 my-lg-5" routerLink="/getting-started">Aan de
 								slag</a>
 						</div>
 
@@ -253,7 +253,7 @@
 						meer winst maken op je evenement. Meld je aan om een evenement aan te maken!</p>
 					<div class="row no-gutters justify-content-center">
 						<div class="col-12 col-sm-8 col-md-7 col-lg-3">
-							<a type="button" class="btn w-100" routerLink="/getting-started">Aan de slag</a>
+							<a type="button" class="btn cta-button w-100" routerLink="/getting-started">Aan de slag</a>
 						</div>
 					</div>
 				</div>
@@ -261,4 +261,4 @@
 		</div>
 	</div>
 
-</div><app-footer></app-footer>
+	<app-new-home-footer></app-new-home-footer>
