--- a/tickevents-placeholder/src/app/how-it-works/how-it-works.component.css
+++ b/tickevents-placeholder/src/app/how-it-works/how-it-works.component.css
@@ -66,7 +66,8 @@
     min-height: 100vh;
 }
 
-.cta.btn {
+.cta-button {
+    background: none;
     background-color: #EA8585;
     color: white;
     font-weight: 500;
@@ -90,7 +91,7 @@
 
 }
 
-.cta.btn:hover {
+.cta-button:hover {
     background-color: #B36666;
     color: white;
     -webkit-transition: background-color 0.2s ease;
@@ -98,7 +99,7 @@
     transition: background-color 0.2s ease;
 }
 
-.cta.btn:active {
+.cta-button:active {
     background-color: #E68383;
     -webkit-box-shadow: none;
     box-shadow: none;
@@ -357,7 +358,7 @@
         padding-top: 0px
     }
 
-    .cta.btn {
+    .cta-button {
         font-size: 1.25em;
     }
 
