updated button class names

--- a/tickevents-placeholder/src/app/new-home/footer/footer.component.html
+++ b/tickevents-placeholder/src/app/new-home/footer/footer.component.html
@@ -28,9 +28,9 @@
                                 <div class="col-12 col-lg-4 mt-3 pl-md-0">
                                     <ngx-spinner></ngx-spinner>
                                     <button type="submit"
-                                        class="d-inline-block d-md-none cta-email-button ft-alata px-5">Verzend</button>
+                                        class="d-inline-block d-md-none cta-footer-button ft-alata px-5">Verzend</button>
                                     <button type="submit"
-                                        class="d-none d-md-inline-block w-100 cta-email-button ft-alata px-5">Verzend</button>
+                                        class="d-none d-md-inline-block w-100 cta-footer-button ft-alata px-5">Verzend</button>
                                 </div>
                             </div>
 
