--- a/tickevents-placeholder/src/app/new-home/new-home.component.css
+++ b/tickevents-placeholder/src/app/new-home/new-home.component.css
@@ -65,7 +65,7 @@
     font-size: 1.25em;
 }
 
-.btn-seondairy-cta {
+.cta-secondary-button {
     border: 2px solid white;
     font-size: 1.125em;
     background: rgba(0, 0, 0, 0);
