--- a/tickevents-placeholder/src/app/new-home/new-home.component.html
+++ b/tickevents-placeholder/src/app/new-home/new-home.component.html
@@ -162,7 +162,7 @@
 										</div>
 										<div class="col-12 col-md-6 button-section mt-4 pl-md-2">
 											<button routerLink="/pricing"
-												class="button btn-seondairy-cta w-100 text-center">Prijzen</button>
+												class="button cta-secondary-button w-100 text-center">Prijzen</button>
 										</div>
 									</div>
 								</div>
